# advent_of_code_2023

./: aoc2023.cabal
app/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day07part2.hs
