cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
synopsis:           Advent of code 2023

license:            Apache-2.0
license-file:       LICENSE
author:             Garry O'Donnell
maintainer:         garry.euan.odonnell@ntlworld.com

extra-source-files: CHANGELOG.md

executable day01
  main-is:            day01.hs

  build-depends:      base ^>=4.17.2.0
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day02
  main-is:            day02.hs

  build-depends:      base ^>=4.17.2.0, text ^>=2.0.2
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day03
  main-is:            day03.hs

  build-depends:      base ^>=4.17.2.0
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day04
  main-is:            day04.hs

  build-depends:      base ^>=4.17.2.0, text ^>=2.0.2, containers ^>=0.6.7
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day05
  main-is:            day05.hs

  build-depends:      base ^>=4.17.2.0, text ^>=2.0.2
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day06
  main-is:            day06.hs

  build-depends:      base ^>=4.17.2.0
  hs-source-dirs:     app
  default-language:   Haskell2010

executable day07
  main-is:            day07.hs

  build-depends:      base ^>=4.17.2.0
  hs-source-dirs:     app
  default-language:   Haskell2010
